# mlops-zoomcamp

02-experiment-tracking/: pyproject.toml
02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
04-deployment/web-service/: Dockerfile  pyproject.toml
04-deployment/web-service-mlflow/: pyproject.toml  random-forest.ipynb
