[tool.poetry]
name = "02-experiment-tracking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.1"
scipy = "^1.9.0"
mlflow = "^1.27.0"
scikit-learn = "^1.1.2"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
