[tool.poetry]
name = "web-service-mlflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mlflow = "^1.27.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
scikit-learn = "^1.1.2"
gunicorn = "^20.1.0"
pyarrow = "^9.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
